@@ -1,3 +1,10 @@
+2012-04-24  Georg-Johann Lay  <avr@gjlay.de>
+
+	Backport from 2012-04-24 mainline r186768.
+
+	PR target/53065
+	* config/avr/avr.h (HARD_REGNO_CALL_PART_CLOBBERED): New hook define.
+
 2012-04-24  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/53085
